<resources>
    <string name="app_name">FeedScreenSDK</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="af_topic1">Give Job</string>
    <string name="af_topic2">Get Job</string>
    <string name="af_topic3">Give Investment</string>
    <string name="af_topic4">Get Investment</string>
    <string name="topic">Topic</string>
    <string name="topic1">We are Hiring</string>
    <string name="topic2">Open to Work</string>
    <string name="topic3">Ready to Invest</string>
    <string name="topic4">Seeking Investment</string>
    <string name="slash_from">From</string>
    <string name="camera_roll">camera roll</string>
    <string name="no_loops_feed_msg">Loops are dynamic discussion spaces centered around specific themes. Share videos, get reactions, and enjoy engaging comments from the community.</string>
    <string name="ready_to_start_loop">Ready to Start Your First Loop?</string>
    <string name="new_loop">Create a Loop</string>
    <string name="for_you_small_y">For you</string>
    <string name="search">Search</string>
    <string name="replay_to_any_video">Reply with a video</string>
    <string name="reply_sent">Reply sent! \nYou\'ll see the conversation in \nyour inbox once they\'ve \nresponded back.</string>
    <string name="txt_reply">Reply</string>
    <string name="dont_show_again">Don’t show this again</string>
    <string name="got_it">Got it</string>
    <string name="go_back">Go back</string>
    <string name="view_loop">View Loop</string>
    <string name="browse_community">Browse Community</string>
    <string name="txt_try_again">Try Again</string>
    <string name="no_internet_try_again">Uh-oh. We can\'t connect to your internet. \nPlease check your internet and try again. </string>
    <string name="roundtables">Loops</string>
    <string name="repost_video">Repost video</string>
    <string name="repost_tutorial_desc">Repost interesting videos to your Loops to share the love!\n\nOnly Collaborators can post in Loops, and a video can only be shared once per loop.</string>
    <string name="go_to_inbox">Go to Inbox</string>
    <string name="loading_new_videos">Loading new videos…</string>
    <string name="all_caught_up">You\'re all caught up!</string>
    <string name="my_loop_end_desc">You\'ve seen all new videos from the Loops you are collaborating on. Check out these other Loops where you can collaborate.</string>
    <string name="go_to_for_you">Go to \'For You\' feed</string>
    <string name="empty_feed_subscriptions">When you subscribe to a Loop, you\'ll see the videos posted in the Loop here.</string>
    <string name="empty_feed_my_loops">When you collaborate on Loops, you\'ll see the videos posted in the Loop here.</string>
    <string name="subscriptions_end_desc">You\'ve seen all new videos from the Loops you subscribed. Check out these other Loops that you can subscribe to.</string>
    <string name="empty_suggestions_subscriptions">You\'ve seen all new videos from the Loops you subscribed. Explore other trending content in ‘For You’ feed or check back later for updates.</string>
    <string name="empty_suggestions_my_loops">You\'ve seen all new videos from the Loops you are collaborating on. Explore other trending content in ‘For You’ feed or check back later for updates.</string>
    <string name="ask_question">Ask</string>
    <string name="subscribe">Subscribe</string>
    <string name="ago">ago</string>
    <string name="just_now">Just now</string>
    <string name="request_to_join">Join as Collaborator</string>
    <string name="pending">Pending</string>
    <string name="subscribed">Subscribed</string>
    <string name="collaborators">Collaborators</string>
    <string name="g">G</string>
    <string name="unlisted">Unlisted</string>
    <string name="reposted_small">reposted</string>
    <string name="video_unavailable">This video is unavailable.</string>
    <string name="add_question">Add</string>
    <string name="retry">Retry</string>
    <string name="txt_clear">Clear</string>
    <string name="retry_all_count">Retry All (%d)</string>
    <string name="clear_all_count">Clear All (%d)</string>
    <string name="report">Report</string>
    <string name="delete">Delete</string>
    <string name="my_loops">My Loops</string>
    <string name="my_communities">My communities</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="no_internet" translatable="false">Uh-oh. We can\'t connect to your internet. Please check your internet and try again.</string>
    <string name="no_videos_found_try_a_different_search_term">Try a different search term \nor \ncreate a video to let the community \nknow what you\'re looking for.</string>
    <string name="didn_t_find_what_you_were_looking_for">Didn\'t find what you\'re \nlooking for?</string>
    <string name="go_back_feed">Go back to Feed</string>
    <string name="see_link">See Link</string>
    <string name="repost_tooltip">Repost this video in\na Loop</string>
    <string name="community_txt">Community</string>
    <string name="saved_message">Saved!</string>
    <string name="unsaved_message">Save removed!</string>
    <string name="video_save_to_gallery">Video has been saved to gallery</string>
    <string name="video_save_failed">Failed to save video</string>
    <string name="email_invalid">Invalid email id</string>
    <string name="empty_email">Please enter email id</string>
    <string name="pwd_validation">Password doesn\'t match</string>
    <string name="views">Views</string>
    <string name="videos">Videos</string>
    <string name="view">View</string>
    <string name="video_V">Video</string>
    <string name="user_deleted_msg">This user is no longer on Genuin.</string>
    <string name="you">You</string>
    <string name="comment">Comment</string>
    <string name="watch_roundtable">Watch Loop</string>
    <string name="share">Share</string>
    <string name="why_flagged">Flagged video details</string>
    <string name="download">Download</string>
    <string name="reply">Reply</string>
    <string name="pin_to_loop">Pin to Loop</string>
    <string name="unpin_from_loop">Unpin from Loop</string>
    <string name="view_profile">View profile</string>
    <string name="unsave">Unsave</string>
    <string name="edit">Edit</string>
    <string name="community_longer_available">The Community you are looking is no longer available.</string>
    <string name="loops">Loops</string>
    <string name="no_of_loop">Loop</string>
    <string name="no_of_loops">Loops</string>
    <string name="no_of_video_caps">Video</string>
    <string name="no_of_videos_caps">Videos</string>
    <string name="loop_dot">∙</string>
    <string name="no_loops_yet">No Loops… yet!</string>
    <string name="no_loops_community_non_member_msg">Loops are dynamic discussion spaces centered around specific themes. Members can share videos, get reactions, and enjoy engaging comments from the community.</string>
    <string name="no_loops_msg">Loops are video groups for discussing specific topics. Add videos to share with audiences, who watch, react, and comment to stay up-to-date.\n\nWhen you start or collaborate on a Loop, you\'ll see updates posted here.</string>
    <string name="posted">posted</string>
    <string name="okay">Okay</string>
    <string name="invite_all_validation1">Please try after 1 day.</string>
    <string name="invitation_sent_header">Invitation Sent</string>
    <string name="roundtable_header">Get in the Loop</string>
    <string name="roundtable_desc_tutorial">Loops are public groups dedicated to discussing specific topics. Collaborators share videos, and anyone can follow along and comment.\n\nAll Loops are unlisted by default and can be made visible to everyone on and off Genuin.</string>
    <string name="delete_this_conversation">Delete this conversation?</string>
    <string name="txt_delete_chat_sub">This conversation will be deleted from yours and the other person\'s inbox.</string>
    <string name="btn_delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="choose_topic">Choose a topic</string>
    <string name="remove_topic">Remove topic</string>
    <string name="txt_delete_video">Are you sure you want to \nremove this video from the Saved Videos?</string>
    <string name="btn_yes">Yes</string>
    <string name="success">Success</string>
    <string name="video_successfully_published">Your video is being uploaded. To upload faster, keep the app open.</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="video_play">Video play</string>
</resources>