<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llTopicMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_ll_shape"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dimen_24dp"
    android:paddingVertical="@dimen/dimen_24dp">

    <com.begenuin.library.common.customViews.CustomTextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_next_bold"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/dimen_5dp"
        android:paddingVertical="@dimen/dimen_2dp"
        android:text="@string/choose_topic"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivWeAreHiring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/topic1"
                app:srcCompat="@drawable/ic_topic1" />

            <ImageView
                android:id="@+id/ivReadyToInvest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/topic3"
                android:layout_marginTop="@dimen/dimen_8dp"
                app:srcCompat="@drawable/ic_topic3" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivOpenToWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/topic2"
                app:srcCompat="@drawable/ic_topic2" />

            <ImageView
                android:id="@+id/ivSeekingInvestment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/topic4"
                android:layout_marginTop="@dimen/dimen_8dp"
                app:srcCompat="@drawable/ic_topic4" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:backgroundTint="@color/colorWhite"
        android:fontFamily="@font/avenir_next_bold"
        android:text="@string/remove_topic"
        android:textAllCaps="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:letterSpacing="0"
        android:minHeight="0dp"
        android:textSize="@dimen/text_size_15sp"
        android:paddingHorizontal="@dimen/dimen_24dp"
        android:textColor="@color/color_949494"
        app:strokeColor="@color/color_949494"
        app:strokeWidth="@dimen/dimen_1dp" />


</LinearLayout>