<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/colorWhite">

    <ScrollView
        android:id="@+id/scrollSuccessPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnShare">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_30dp">

                <ImageView
                    android:id="@+id/ivCloseSuccess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/dimen_30dp"
                    android:contentDescription="@string/go_back"
                    android:src="@drawable/ic_close_blue" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen_60dp"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/ivPlaceholder"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        android:src="@drawable/checkmark_success"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:layout_alignParentBottom="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/avenir_next_bold"
                        android:gravity="center"
                        android:text="@string/success"
                        android:textColor="@color/splash_background"
                        android:textSize="@dimen/text_size_36sp" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="@dimen/dimen_140dp"
                        android:layout_height="@dimen/dimen_160dp"
                        android:layout_centerHorizontal="true"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="false"
                        app:lottie_rawRes="@raw/success_lottie"/>


                </RelativeLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/thumb_width"
                    android:layout_height="@dimen/thumb_height"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    app:cardCornerRadius="@dimen/dimen_15dp">

                    <ImageView
                        android:id="@+id/imgThumbnail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/thumbnail"
                        android:scaleType="centerCrop" />

                    <ImageView
                        android:id="@+id/img_play"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/video_play"
                        android:src="@drawable/ic_play_overlay"
                        android:visibility="gone" />

                    <com.begenuin.library.common.customViews.CustomTextView
                        android:id="@+id/tvViewTimeDuration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/avenir_next_bold"
                        android:padding="@dimen/dimen_10dp"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/text_size_small_13sp" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:layout_marginEnd="@dimen/dimen_16dp"
                    android:layout_marginBottom="@dimen/dimen_16dp"
                    android:fontFamily="@font/avenir_next_bold"
                    android:gravity="center"
                    android:text="@string/video_successfully_published"
                    android:textColor="@color/black_111111"
                    android:textSize="@dimen/text_size_big_20sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:layout_marginBottom="@dimen/dimen_24dp"
        android:fontFamily="@font/avenir_next_bold"
        android:insetTop="0dp"
        android:letterSpacing="0"
        android:paddingTop="@dimen/dimen_12dp"
        android:paddingBottom="@dimen/dimen_12dp"
        android:stateListAnimator="@null"
        android:text="@string/share"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_big_20sp"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="@dimen/dimen_5dp" />

</RelativeLayout>